# Dots

./: .dot  .gitignore  CMakeLists.txt  README.md
cfg/: .dots
include/: arc.hpp  filemgr.hpp
include/arc/: arc.hpp
include/encrypt/: encrypt.hpp
lib/: libssl.so.3
src/: CMakeLists.txt  main.cpp
src/arc/: CMakeLists.txt  main.cpp  main.plist
src/crypto/: main.cpp
src/encrypt/: CMakeLists.txt  main.cpp
src/filemgr/: CMakeLists.txt  main.cpp
